# solarsystem_bevy

./: Cargo.toml  README.md  index.html  solarsystem_bevy-1bc384a648e4253.js  solarsystem_bevy-662633f4abd4a702.js  solarsystem_bevy-97089bbaab9136b8.js  solarsystem_bevy-b58c73e69bbe4872.js  solarsystem_bevy-e9870c860775f93b.js  solarsystem_bevy-f3879b742e2a0ef7.js
src/: main.rs
wasm/: solarsystem_bevy.js  solarsystem_bevy_bg.js
