[package]
name = "solarsystem_bevy"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust_utils = {path = "../rust_utils"}
bevy_panorbit_camera = "*"
rand = "*"
wasm-bindgen = "0.2.88"

# Enable a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable high optimizations for dependencies (incl. Bevy), but not for our code:
[profile.dev.package."*"]
opt-level = 3

[dependencies.bevy]
version = "*"
# the features!!!
# default-features = false
# features = [
#     "bevy_asset",
# ]
# default-features = true
features = [
    "asset_processor",
    # "embedded_watcher",
    "animation",
    "bevy_asset",
    "bevy_scene",
    "bevy_winit",
    "bevy_core_pipeline",
    "bevy_pbr",
    "bevy_gltf",
    "bevy_render",
    "bevy_sprite",
    "bevy_text",
    # "bevy_ui",
    # "png",
    # "jpeg",
    # "hdr",
    # "zstd",
    # "x11",
    "ktx2",
    "tonemapping_luts",
    "serialize",
    ]
